--- a/place.html
+++ b/place.html
@@ -40,7 +40,7 @@
       </div>
   </nav>
   <div class="distimg">
-<img src="img/wayanad-gc6a34b9f5_1920.jpg" class="img-fluid" height="100px" alt="...">
+<!-- <img src="img/wayanad-gc6a34b9f5_1920.jpg" class="img-fluid" alt="..."> -->
 </div>
 </section>
 </body>
