--- a/index.html
+++ b/index.html
@@ -46,9 +46,9 @@
       <a href="#" class="button1">SIGN UP</a>
   </div>
   </section>
-  <section class="activties">
+  <section class="activties container">
     <div class="heading">
-      <h2>Activties</h2>
+      <h1>Top 6 Destination</h1>
     <div class="row row-cols-1 row-cols-md-3 g-4">
       <div class="col">
         <div class="card h-100">
