--- a/Alappuzha.html
+++ b/Alappuzha.html
@@ -45,7 +45,7 @@
     <div class="dist-head ">
       <h1>Alappuzha</h1>
     </div>
-    <div class="dist-img "><img  height="600px" src="img/Alappuzha.jpeg" alt=""></div>
+    <div class="dist-img "><img  height="600px" src="img/allu.jpg" alt=""></div>
     <div class="dist-para">
       <p>Alleppey is a city and a municipality in Kerala with an urban population of 174,164[1] and ranks third among the districts in literacy rate in the state. In 2016, the Centre for Science and Environment rated Alappuzha as the cleanest town in India.[2] Alappuzha is considered to be the oldest planned city in this region and the lighthouse built on the coast of the city is the first of its kind along the Laccadive Sea coast.[3]
   
