--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <nav class="navbar navbar-expand-lg bg-custom">
       <div class="container-fluid">
         <a class="navbar-brand" href="#">
-          <img src="img/logo-1.png" alt=""  height="60" class="d-inline-block align-text-top">
+          <img src="./img/logo-1.png" alt=""  height="60" class="d-inline-block align-text-top">
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -23,10 +23,10 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#">HOME</a>
+              <a class="nav-link active" aria-current="page" href="index.html">HOME</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link " href="#">GALLERY</a>
+              <a class="nav-link " href="district.html">DISTRICT</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#">ABOUT</a>
@@ -42,8 +42,8 @@
       <h2>Welcome To Kerala</h2></br>
       <h1>A place where go <span class="change_content"></span></h1>
       <p>"The Land of Beauty and Wonders"</p>
-      <a href="#" class="button">LOGIN</a>
-      <a href="#" class="button1">SIGN UP</a>
+      <a href="login.html" class="button">LOGIN</a>
+      <a href="sign.html" class="button1">SIGN UP</a>
   </div>
   </section>
   <section class="activties container">
