--- a/district.html
+++ b/district.html
@@ -45,7 +45,8 @@
       <div class="row row-cols-1 row-cols-md-3 g-4">
         <div class="col">
           <div class="card h-100">
-            <img src="img/Alappuzha.jpeg" class="card-img-top" alt="...">
+      
+            <a href="Alappuzha.html"><img src="img/Alappuzha.jpeg" class="card-img-top" alt="..."></a>
             <div class="card-body">
               <h5 class="card-title">Alappuzha</h5>
               <p class="card-text">A houseboat cruise in these backwaters is a delightful experience.Alappuzha is also the access point for the annual Nehru Trophy Boat Race, held on the Punnamada Lake.
@@ -55,7 +56,7 @@
         </div>
         <div class="col">
           <div class="card h-100">
-            <img src="img/Ernakulam.png" class="card-img-top" alt="...">
+            <a href="Ernakulam.html"><img src="img/Ernakulam.png" class="card-img-top" alt="..."></a>
             <div class="card-body">
               <h5 class="card-title">Ernakulam</h5>
               <p class="card-text">Ernakulam district also hosts the highest number of international and domestic tourists in Kerala state.
@@ -65,7 +66,7 @@
         </div>
         <div class="col">
           <div class="card h-100">
-            <img src="img/Idukki.jpg" class="card-img-top" alt="...">
+            <a href=""><img src="img/Idukki.jpg" class="card-img-top" alt="..."></a>
             <div class="card-body">
               <h5 class="card-title">Idukki</h5>
               <p class="card-text">This beautiful High range district of Kerala is geographically known for its mountainous hills and dense forests.
@@ -75,7 +76,7 @@
         </div>
         <div class="col">
           <div class="card h-100">
-            <img src="img/Kannur.jpg" class="card-img-top" alt="...">
+            <a href=""><img src="img/Kannur.jpg" class="card-img-top" alt="..."></a>
             <div class="card-body">
               <h5 class="card-title">Kannur</h5>
               <p class="card-text">Kannur is dubbed as the City of Looms and Lores, thanks to the flourishing handloom industry and folk art called Theyyam</p>
@@ -84,7 +85,7 @@
         </div>
         <div class="col">
             <div class="card h-100">
-              <img src="img/Kasaragod.jpg" class="card-img-top" alt="...">
+              <a href=""><img src="img/Kasaragod.jpg" class="card-img-top" alt="..."></a>
               <div class="card-body">
                 <h5 class="card-title">Kasaragod</h5>
                 <p class="card-text">The Land of Seven Languages,The Land of God.Arabs called Kasaragod as Harkwilla.</p>
@@ -93,7 +94,7 @@
           </div>
           <div class="col">
             <div class="card h-100">
-              <img src="img/Kollam.jpg" class="card-img-top" alt="...">
+              <a href=""><img src="img/Kollam.jpg" class="card-img-top" alt="..."></a>
               <div class="card-body">
                 <h5 class="card-title">Kollam</h5>
                 <p class="card-text">Kollam District  Kerala’s cashew industry. Plains, mountains, lakes, lagoons and backwaters, forests, farmland and rivers 
@@ -103,7 +104,7 @@
           </div>
           <div class="col">
             <div class="card h-100">
-              <img src="img/Hill-station.jpg" class="card-img-top" alt="...">
+              <a href=""><img src="img/Hill-station.jpg" class="card-img-top" alt="..."></a>
               <div class="card-body">
                 <h5 class="card-title">Kottayam</h5>
                 <p class="card-text">Kottayam has a vast network of rivers, backwaters, ancient religious places, and hillstations.</p>
@@ -112,7 +113,7 @@
           </div>
           <div class="col">
             <div class="card h-100">
-              <img src="img/Kozhikode.jpg" class="card-img-top" alt="...">
+              <a href=""><img src="img/Kozhikode.jpg" class="card-img-top" alt="..."></a>
               <div class="card-body">
                 <h5 class="card-title">Kozhikode</h5>
                 <p class="card-text">kozhikode city also known as Calicut is the headquarters of this district.Kozhikode district is bordered by the districts of Kannur</p>
@@ -121,7 +122,7 @@
           </div>
           <div class="col">
             <div class="card h-100">
-              <img src="img/Malappuram.jpg" class="card-img-top" alt="...">
+              <a href=""><img src="img/Malappuram.jpg" class="card-img-top" alt="..."></a>
               <div class="card-body">
                 <h5 class="card-title">Malappuram</h5>
                 <p class="card-text"> Malappuram the adventurous traveler in this northern part of the southern Indian state of Kerala. Some of the famous tourist destination of Malappuram District</p>
@@ -130,7 +131,7 @@
           </div>
           <div class="col">
             <div class="card h-100">
-              <img src="img/Palakkad.jpg" class="card-img-top" alt="...">
+              <a href="Palakkad.html"><img src="img/Palakkad.jpg" class="card-img-top" alt="..."></a>
               <div class="card-body">
                 <h5 class="card-title">Palakkad</h5>
                 <p class="card-text">Palakkad is one of the most ideal cities in Kerala to buy a home and settle down.</p>
@@ -139,7 +140,7 @@
           </div>
           <div class="col">
             <div class="card h-100">
-              <img src="img/Pathanamthitta.jpg" class="card-img-top" alt="...">
+              <a href=""><img src="img/Pathanamthitta.jpg" class="card-img-top" alt="..."></a>
               <div class="card-body">
                 <h5 class="card-title">Pathanamthitta</h5>
                 <p class="card-text">Pathanamthitta is a famous for pilgrimage destinations in Kerala and is often termed as "Headquarters of Pilgrimage" Tourism in Kerala</p>
@@ -147,7 +148,7 @@
             </div>
           </div><div class="col">
             <div class="card h-100">
-              <img src="img/Trivandrum-1.jpg" class="card-img-top" alt="...">
+              <a href="Trivandrum.html"></a><img src="img/Trivandrum-1.jpg" class="card-img-top" alt="..."></a>
               <div class="card-body">
                 <h5 class="card-title">Trivandrum</h5>
                 <p class="card-text">Thiru Anantha Puram, or the city of the Holy Anantha, is named after Ananthan, the cosmic serpent with a thousand heads, on whose coils Lord Mahavishnu reclines.</p>
@@ -156,7 +157,7 @@
           </div>
           <div class="col">
             <div class="card h-100">
-              <img src="img/Thrissur.jpg" class="card-img-top" alt="...">
+              <a href=""><img src="img/Thrissur.jpg" class="card-img-top" alt="..."></a>
               <div class="card-body">
                 <h5 class="card-title">Thrissur</h5>
                 <p class="card-text">The district is famous for its ancient temples, churches, and mosques."Thrissivaperur" which means the town of the Sacred Shiva.</p>
@@ -165,7 +166,7 @@
           </div>
           <div class="col">
             <div class="card h-100">
-              <img src="img/Wayanad.jpg" class="card-img-top" alt="...">
+              <a href="Wayanad.html"><img src="img/Wayanad.jpg" class="card-img-top" alt="..."></a>
               <div class="card-body">
                 <h5 class="card-title">Wayanad</h5>
                 <p class="card-text">Wayanad is one of the exotic Hill Stations of Kerala amidst the western ghats. It has rich cultural history and offers various famous visiting places all over the districts.</p>
