--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
               <a class="nav-link " href="district.html">DISTRICT</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">ABOUT</a>
+              <a class="nav-link" href="About.html">ABOUT</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#">CONTACT</a>
