--- a/Trivandrum.html
+++ b/Trivandrum.html
@@ -24,10 +24,10 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="index.html">HOME</a>
+              <a class="nav-link " aria-current="page" href="index.html">HOME</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link " href="district.html">DISTRICT</a>
+              <a class="nav-link active" href="district.html">DISTRICT</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#">ABOUT</a>
